@@ -15,6 +15,9 @@ libnet-scp-expect-perl (0.13-1) UNRELEASED; urgency=low
   * Set Standards-Version to 3.8.0 (no changes).
   * Remove version from build dependency on libexpect-perl (even oldstable has
     a newer version).
+  * Remove debian/docs and don't install README any more (text version of the
+    inline POD documentation).
+  * Refresh debian/rules, no functional changes.
 
  -- gregor herrmann <gregor+debian@comodo.priv.at>  Sat, 01 Dec 2007 18:55:10 +0100
 
